@@ -62,7 +62,9 @@ REPORT REFERRALS    sg_referrals, ++
 REPORT SUPPORTED OPERATION CODES              sg_opcodes
 REPORT SUPPORTED TASK MANAGEMENT FUNCTIONS    sg_opcodes
 REPORT TARGET PORT GROUPS       sg_rtpg, sg_stpg ++
+REPORT ZONES        sg_rep_zones
 REQUEST SENSE       sg_requests, ++
+RESET WRITE POINTER sg_reset_wp
 SANITIZE            sg_sanitize
 SEND DIAGNOSTIC     sg_senddiag, sg_ses, ++
 SET IDENTIFYING INFORMATION  sg_ident, ++ (3)
@@ -116,4 +118,4 @@ THIRD PARTY COPY IN (0x83).
 
 
 Douglas Gilbert
-22nd May 2014
+10th June 2014
