@@ -2,7 +2,7 @@ sg3-utils (1.39-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 08 June 2014 13:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Thu, 12 June 2014 09:00:00 -0400
 
 sg3-utils (1.38-0.1) unstable; urgency=low
 
